# musig_server

./: .gitignore  CMakeLists.txt  README.md  client.cpp
crypto/: sha256sum.h
lib/: musig_lib.cpp  musig_lib.h
server/: musig_server.cpp
utils/: include_secp256k1_zkp_lib.h
